# rust_trading_tools

./: .gitignore  Cargo.toml  README.md  build.sh  config.toml  example.env
cache/: config.toml
crates/app_core/: Cargo.toml
crates/app_core/cache/: config.json  config.toml
crates/app_core/src/: app_state.rs  arg_parsing.rs  cli_server.rs  command_structs.rs  engine.rs  errors.rs  lib.rs
crates/app_state/: Cargo.toml
crates/app_state/cache/: config.json
crates/app_state/src/: lib.rs
crates/arg_parsing/: Cargo.toml
crates/arg_parsing/src/: lib.rs
crates/bars/: Cargo.toml
crates/bars/src/: lib.rs
crates/charts/: Cargo.toml
crates/charts/src/: lib.rs
crates/database_ops/: Cargo.toml
crates/database_ops/src/: connection.rs  kraken.rs  lib.rs
crates/indicators/: Cargo.toml
crates/indicators/src/: moving_averages.rs
crates/servers/: Cargo.toml
crates/servers/src/: lib.rs
crates/string_helpers/: Cargo.toml
crates/string_helpers/src/: lib.rs
crates/timestamp_tools/: Cargo.toml
crates/timestamp_tools/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs  system_settings.rs
crates/tui/src/screens/: candles.rs  database.rs  mod.rs  settings.rs  strategies.rs
src/: bar_builders.rs  config.rs  lib.rs  main.rs
