[package]
name = "trading_app"
version = "0.1.0"
edition = "2024"

[dependencies]
# My modules
app_core = { path = "crates/app_core" }   

# Third party
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.10"
tokio = { version = "1.48.0", features = ["full"] }

[workspace]
members = [
    "crates/app_core",
    "crates/app_state",
    "crates/bars", 
    "crates/charts",
    "crates/database_ops", 
    "crates/indicators",
    "crates/timestamp_tools"
]

