[package]
name = "trading_app"
version = "0.1.0"
edition = "2024"

[dependencies]
# My modules
app_core = { path = "crates/app_core" }   

# Third party
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.7", features = ["postgres"]}
toml = "0.9.10"
tokio = { version = "1.48.0", features = ["full"] }

[workspace]
members = [
    "crates/app_core",
    "crates/bars", 
    "crates/charts",
    "crates/database_ops", 
    "crates/indicators",
    "crates/timestamp_tools"
]

