[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.7", features = ["postgres"]}
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"

# My modules 
bars = { path = "../bars" }
charts = { path = "../charts" }
database_ops = { path = "../database_ops" }
indicators = { path = "../indicators" }
timestamp_tools = { path = "../timestamp_tools" }
