[package]
name = "database_ops"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
    "bigdecimal"
]}

# My local modules
timestamp_tools = { path = "../timestamp_tools" }
string_helpers = { path = "../string_helpers" }
